fixing the alignment shit I fucked up
hopefully this is okay

--- a/assets/styles/components/_article-summary.scss
+++ b/assets/styles/components/_article-summary.scss
@@ -1,10 +1,10 @@
 .article-summary {
   @include row();
   margin-bottom: $baseline;
-  @include side-padding;
+  //@include side-padding;
   @include media($medium) {
     padding-left: 0;
-    padding-right: $baseline/2;
+    //padding-right: $baseline/2;
   }
   &:after {
     content: "";
