--- a/assets/styles/widgets/_link-sm.scss
+++ b/assets/styles/widgets/_link-sm.scss
@@ -9,9 +9,11 @@
   margin-right: -$baseline/2;
 
   @include media($medium) {
-    margin-right: 5px;
+    //margin-right: 5px;
+    margin-right: 0;
     margin-left: 0;
     padding: $baseline/4;
+    width: auto;
   }
 }
 
